<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_criar_meta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1ecec"
    tools:context="com.example.helena.elevesaude.CriarMetaActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary">
    </RelativeLayout>

    <ImageView
        android:id="@+id/foto_meta"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/target1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/foto_meta"
        android:paddingBottom="@dimen/layout_padding_normal"
        android:paddingLeft="@dimen/layout_padding_normal"
        android:paddingRight="@dimen/layout_padding_normal"
        android:paddingTop="@dimen/layout_padding_large">

        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/titulo_meta"
            android:padding="@dimen/edit_text_padding"
            android:background="@drawable/border"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="@dimen/view_margin"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/fundamentacao"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_below="@id/nome"
            android:hint="@string/fundamentacao_meta"
            android:padding="@dimen/edit_text_padding"
            android:background="@drawable/border"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="@dimen/view_margin"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/layout_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fundamentacao"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:baselineAligned="false"
            android:layout_marginBottom="@dimen/view_margin">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/view_margin">

                <EditText
                    android:id="@+id/num_exec"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/num_execucoes"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/edit_text_padding"
                    android:textSize="17sp"
                    android:inputType="number"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/white"
                    android:imeOptions="actionDone"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/data_limite"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:clickable="true"
                    android:hint="@string/data_limite"
                    android:focusable="false"
                    android:padding="@dimen/edit_text_padding"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/white"
                    android:singleLine="true"/>
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_meta"
            android:layout_below="@id/layout_horizontal"
            android:layout_marginBottom="5dp"/>

        <RelativeLayout
            android:id="@+id/tipo_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginRight="3dp"
            android:background="@drawable/spinner_detail"
            android:layout_below="@id/tv_tipo"
            android:layout_marginBottom="@dimen/view_margin">

            <Spinner
                android:id="@+id/tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:spinnerMode="dropdown" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/drop_menor"
                android:backgroundTint="@color/colorPrimary"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/layout_padding_normal"
        android:paddingLeft="@dimen/layout_padding_normal"
        android:paddingBottom="@dimen/layout_padding_normal"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/view_margin">

                <Button
                    android:id="@+id/cancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cancelar"
                    android:textColor="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimary"
                    android:textSize="18sp"
                    android:background="@drawable/transparent_border" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/criar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:text="Criar"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:background="@drawable/border"
                    android:backgroundTint="@color/colorPrimary" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
